2005-07-12 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/alloc.cc, reroot/libreroot/alloc.h: Added.
	* reroot/libreroot/libc.cc, reroot/libreroot/libc.h: Moved memory
	  allocation functions to alloc.cc & alloc.h.

	* reroot/shared_implementation.cc: Added.
	* reroot/libreroot/shared.cc: Added.  Includes shared_implementation.cc.
	* reroot/xmessage.h: `xmessage' c'tor moved to shared_implementation.cc.
	* reroot/packet.h: Message metadata comparison operators moved to
	  shared_implementation.cc.

	* reroot/rerootd/messagequeue.cc: Commented out `send' & `receive'
	  functions.

	* reroot/message.h: Added, currently unused.

	* reroot/TODO: Removed for stating the obvious & being in the way.

2005-07-11 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/libc.cc: Tidied error messages.

	* reroot/message.h: Renamed to packet.h.
	* reroot/packet.h: Renamed `reroot::message' to `reroot::message_data'.
	* reroot/libreroot/messagequeue.cc: Changed references to `message' into
	  references to `message_data'.

	* reroot/rerootd/messagequeue.cc, reroot/rerootd/messagequeue.h:
	  Rewritten based on their libreroot counterparts.

	* reroot/rerootd/rerootd.cc, reroot/rerootd/rerootd.h: Made aware of
	  namespace `reroot'.  Use `canonize_file_name' instead of specially
	  written function.  Improved error reporting.  rerootd actually
	  compiles again.

2005-07-10 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/message.h: Added `meta' for storing packet & message metadata.
	  Separated `packet' & `message'.  Added `packet_meta_size'.  Added
	  equality & inequality operators to simplify working with packet
	  metadata.
	* reroot/libreroot/messagequeue.cc (send, receive): Simplified & cleaned
	  up given the above changes.

	* reroot/message.h: Optimized `meta' inequality operator.

	* reroot/libreroot/messagequeue.cc (send): Fixed bug, small
	  optimization.

	* reroot/libreroot/xmessage.cc: Removed.