@@ -1,3 +1,7 @@
+2005-07-18 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* reroot/rerootd/shared.cc: Added.  Includes shared_implementation.cc.
+
 2005-07-12 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* reroot/libreroot/alloc.cc, reroot/libreroot/alloc.h: Added.
